libiosfc_a_SOURCES+=posix/ios_unixdatagramsocketimpl.cpp \
                    posix/ios_unixsocketaddressimpl.cpp \
                    posix/ios_unixsocketimpl.cpp \
                    posix/ios_unixthreadimpl.cpp \
                    posix/ios_unixselectorimpl.cpp \
                   posix/ios_unixnetworkinterfacerequesterimpl.cpp


