libiosfc_a_SOURCES+=posix/ios_unixdatagramsocketimpl.cpp \
                    posix/ios_unixsocketaddressimpl.cpp \
                    posix/ios_unixsocketimpl.cpp \
                    posix/ios_unixthreadimpl.cpp \
                    posix/ios_unixselectorimpl.cpp \
                   posix/ios_unixnetworkinterfacerequesterimpl.cpp


EXTRA_DIST+=posix/ios_unixdatagramsocketimpl.h \
            posix/ios_unixselectorimpl.h \
            posix/ios_unixserversocketimpl.h \
            posix/ios_unixsocketaddressimpl.h \
            posix/ios_unixsocketimpl.h \
            posix/ios_unixthreadimpl.h

