libiosfc_la_SOURCES+=win32/ios_win32datagramsocketimpl.cpp \
                    win32/ios_win32socketimpl.cpp \
                    win32/ios_win32socketaddressimpl.cpp \
                    win32/ios_win32networkinterfacerequesterimpl.cpp

EXTRA_DIST+=win32/ios_win32datagramsocketimpl.h \
            win32/ios_win32socketaddressimpl.h \
            win32/ios_win32socketimpl.h
